--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   get_it: ^8.0.2
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
